--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
+  
+  {%- include header.html -%}
+  
   <body>
 
     {%- include header.html -%}
