--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,11 @@ layout: base
 ---
 
 <div class="home">
-
+  
+  {%- if page.title -%}
+    <h1 class="page-heading">{{  }}</h1>
+  {%- endif -%}
+  
   {{ content }}
 
 
