--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: base
 <div class="home">
   
   {%- if page.title -%}
-    <h1 class="page-heading">{{  }}</h1>
+    <h1 class="page-heading">{{ page.title | escape }}</h1>
   {%- endif -%}
   
   {{ content }}
