--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header class="site-header">
 
   <div class="wrapper">
-    <a class="site-title"}">{{ site.title | escape }}</a>
+    <a class="site-title"}">
+      {{ site.title | escape }}
+    </a>
   </div>
 </header>
