--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,17 +3,26 @@
 
   <div class="wrapper">
     <div class="footer-col-wrapper">
+      
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
-            <li class="p-name">{{ site.author.name | escape }}</li>
+            <li class="p-name">
+              {{ site.author.name | escape }}
+            </li>
           {% endif -%}
           {% if site.author.email -%}
-            <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
+            <li>
+              <a class="u-email" href="mailto:{{ site.author.email }}">
+              {{ site.author.email }}
+            </a>
+            </li>
           {%- endif %}
         </ul>
       {%- endif %}
+      
       <p>{{ site.description | escape }}</p>
+      
     </div>
   </div>
 </footer>
