--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,8 @@
   <div class="wrapper">
     <div class="footer-col-wrapper">
       
+      <p>Contact:</p>
+      
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
@@ -20,8 +22,6 @@
           {%- endif %}
         </ul>
       {%- endif %}
-      
-      <p>{{ site.description | escape }}</p>
       
     </div>
   </div>
