--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
           {% if site.author.email -%}
             <li>
               <a class="u-email" href="mailto:{{ site.author.email }}">
-              {{ site.author.email }}
+              Email Me! 
             </a>
             </li>
           {%- endif %}
